@@ -6,6 +6,8 @@ normal-foreground= #000000
 normal-background= #ffffff
 keyword-foreground= #ff7700
 keyword-background= #ffffff
+builtin-foreground= #ca00ca
+builtin-background= #ffffff
 comment-foreground= #dd0000
 comment-background= #ffffff
 string-foreground= #00aa00
@@ -35,6 +37,8 @@ normal-foreground= #000000
 normal-background= #ffffff
 keyword-foreground= #ff7700
 keyword-background= #ffffff
+builtin-foreground= #ca00ca
+builtin-background= #ffffff
 comment-foreground= #dd0000
 comment-background= #ffffff
 string-foreground= #00aa00
